# ContextGraph

./: .gitignore  ANALYSIS_COMPLETE.md  CASE_STUDY_ANALYSIS.md  DATA_DOWNLOAD_GUIDE.md  DEMO_GUIDE.md  DOWNLOAD_SUMMARY.md  EXPERIMENT1_LOOP_ANALYSIS.md  EXPERIMENT2_GRAPH_STRUCTURING.md  EXPERIMENT3_PATTERN_MATCHING.md  FAILURE_ANALYSIS_INSIGHTS.md  FINAL_DOWNLOAD_REPORT.md  README.md  analyze_downloaded_data.py  analyzer.py  context_graph.py  data_loader.py  demo.py  download_trajectories.py  experiment1_loop_data.json  experiment2_graph_structuring.py  experiment3_matches.json  experiment3_pattern_matching.py  experiment3_strategies.json  failed_trajectories.json  failed_trajectories_final.json  failure_analysis_full_report.json  failure_analysis_report.json  failure_analyzer.py  loop_detection_analysis.py  pyproject.toml  requirements.txt  search_more_datasets.py  selected_case_raw_trajectories.md  selected_case_trajectories.json  trajectory_analysis.json  trajectory_analysis_final.json
.serena/: project.yml
agent_memory/: __init__.py  consolidator.py  embeddings.py  loop_detector.py  memory.py  models.py  neo4j_store.py  retriever.py  writer.py
demo_output/: context_graph.json  graph.json  notes.json  sample.traj
examples/: demo_memory.py
experiments/: __init__.py
results/: analysis_report.md  experiment_output.json  run_analysis.py  statistical_tests.json
scripts/: run_evaluation.py  run_experiment.py
tests/: __init__.py  conftest.py  test_consolidator.py  test_embeddings.py  test_integration.py  test_loop_detector.py  test_memory.py  test_models.py  (+3 more)
(+3633 files in other folders)
