[project]
name = "agent-memory"
version = "0.1.0"
description = "Long-term memory system for coding agents"
requires-python = ">=3.10"
dependencies = [
    "neo4j>=5.0.0",
    "openai>=1.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agent_memory*"]
